Fix alignment in Moorhen

--- a/src/index.scss
+++ b/src/index.scss
@@ -35,6 +35,7 @@ $lhasa_error_color: red;
     font-size: small;
     padding: 10px;
     width: fit-content;
+    text-align: left;
 }
 
 .toolbar {
